crates/testing/sysml-spec-tests/tests/snapshots/service_command_baseline__sysml_evaluate_expression__coffee_views.snap
---
source: crates/testing/sysml-spec-tests/tests/service_command_baseline.rs
expression: bundle
---
{
  "request": {
    "element_id": "<UUID>",
    "overrides": []
  },
  "response": {
    "context": {},
    "diagnostics": [
      "element `BrewSequenceView` has no compilable expression children"
    ],
    "element_name": "BrewSequenceView",
    "source": "",
    "verdict": "error"
  }
}
