crates/testing/sysml-spec-tests/tests/snapshots/service_command_baseline__sysml_evaluate_expression__espresso_pump.snap
---
source: crates/testing/sysml-spec-tests/tests/service_command_baseline.rs
expression: bundle
---
{
  "request": {
    "element_id": "<UUID>",
    "overrides": []
  },
  "response": {
    "context": {},
    "diagnostics": [],
    "display": "2",
    "element_name": "accumulatorGain",
    "source": "2.0",
    "symbols": [],
    "value": 2.0,
    "value_type": "Float",
    "verdict": "inconclusive"
  }
}
