crates/testing/sysml-spec-tests/tests/snapshots/service_command_baseline__sysml_evaluate_expression__stdlib_base.snap
---
source: crates/testing/sysml-spec-tests/tests/service_command_baseline.rs
expression: bundle
---
{
  "request": {
    "element_id": "<UUID>",
    "overrides": []
  },
  "response": {
    "context": {},
    "diagnostics": [
      "element `Anything` has no compilable expression children"
    ],
    "element_name": "Anything",
    "source": "",
    "verdict": "error"
  }
}
